--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h3> <span> qualification : </span> B.E. Computer Science and Engineering </h3>
         <h3> <span> post : </span> Web developer </h3>
         <h3> <span> language : </span> English,Tamil </h3>
-        <a href="#"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <a href="https://drive.google.com/file/d/1XV2LY0SuHViFs2CFvOAjzKP3Vzu-a6pm/view?usp=drivesdk"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
