--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#education">education</a></li>
-            <li><a href="#portfolio">Certificates</a></li>
+            <li><a href="#portfolio">Pictures</a></li>
             <li><a href="#contact">contact</a></li>
         </ul>
     </nav>
