--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="#home">home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#education">education</a></li>
-            <li><a href="#portfolio">Pictures</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#portfolio">Certificates</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
